new commit: merge this

--- a/js/project.json
+++ b/js/project.json
@@ -1,6 +1,6 @@
 [
   {
-    "title": "DormLocator",
+    "title": "DormLocator 1",
     "image": "images/Dromlocaation.png",
     "alt": "Project 1",
     "description": "A web application built with React, Tailwind CSS, and Firebase that helps students find dormitories near the university.",
